--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <%= link_to "Sign Up", new_user_registration_path if !current_user %>
   <%= link_to "Sign In", new_user_session_path if !current_user %>
   <%= link_to "Sign Out", destroy_user_session_path, :method => :delete if current_user %>
+  <%#= link_to "Change Password", edit_user_password_path if !current_user %>
   
     <%= yield %>
   </body>
