--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,3 +24,44 @@
   <%= link_to 'Edit', edit_post_path(@post) %> |
 <%end%>
 <%= link_to 'Back', posts_path %>
+
+  <h1>All Comments</h1>
+
+  <% comments = Commentary.all%>
+
+  <%for comment in comments%>
+    <%if comment.post == @post%>
+      <p>
+        <strong>Comment:</strong>
+        <%= comment.content %>
+      </p>
+
+      <p>
+        <strong>User:</strong>
+        <%= comment.user.email %>
+      </p>
+
+
+      <p>
+        <strong>Created At:</strong>
+        <%= comment.created_at %>
+      </p>
+
+      <p>
+        <strong>Updated At:</strong>
+        <%= comment.updated_at %>
+      </p>
+      <%if comment.user==current_user%>
+        <%= link_to 'Edit', edit_commentary_path(comment) %> 
+        <%= link_to 'Delete', commentary_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%end%>
+      <br>
+      <%end%>
+    <%end%>
+
+    <h1>Comment on the Post</h1>
+    <%= link_to 'Comment Here', new_commentary_path( :post_id => @post.id)%> 
+    
+
+
+
