--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h1><%=@user.email%></h1>
 
 <table>
   <thead>
@@ -14,11 +14,13 @@
   </thead>
 
   <tbody>
+    
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.name %></td>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
+        
         <td><%= link_to post.user.email , user_path(post.user.id) %></td>
         <td><%= link_to 'Show', post %></td>
         <% if current_user==post.user%>
@@ -28,6 +30,7 @@
       </tr>
     <% end %>
   </tbody>
+
 </table>
 
 <br>
