--- a/app/views/friendships/allfriendrequest.html.erb
+++ b/app/views/friendships/allfriendrequest.html.erb
@@ -2,7 +2,7 @@
 <h4><%=@users.size()%> friend-requests in total</h4>
 
 <%@users.each do |user|%>
-    <p><%= link_to user.email , user_path(user.id) %></p>
+    <p><%= link_to user.fullname , user_path(user.id) %></p>
 <%end%>
 
 <td><%= link_to 'Back', user_path(current_user.id) %></td>
