--- a/app/views/friendships/friendlist.html.erb
+++ b/app/views/friendships/friendlist.html.erb
@@ -1,8 +1,8 @@
-<h2><%=User.find(@user_id).email%>'s friendlist</h2>
+<h2><%=User.find(@user_id).fullname%>'s friendlist</h2>
 <h4><%=@users.size()%> friends in total</h4>
 
 <%@users.each do |user|%>
-    <p><%= link_to user.email , user_path(user.id) %></p>
+    <p><%= link_to user.fullname , user_path(user.id) %></p>
 <%end%>
 
 <td><%= link_to 'Back', user_path(@user_id) %></td>
