--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= post.name %></td>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
-        <td><%= link_to post.user.email , user_path(post.user.id) %></td>
+        <td><%= link_to post.user.fullname , user_path(post.user.id) %></td>
         <td><%= link_to 'Show', post %></td>
         <% if current_user==post.user%>
           <td><%= link_to 'Edit', edit_post_path(post) %></td>
