User profile edit added

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+  <%select_list = { 'Public': 1, 'Only for Friends': 0 }%>
 
   <div class="field">
     <%= form.label :name %>
@@ -23,8 +24,7 @@
 
  <div class="field">
   <%= form.label :visibility %>
-    <p>Choose 1 for public, Choose 0 for Friends Only</p>
-  <%= form.select :visibility, options_for_select(0..1), { prompt: "Choose Visibilty" } %>
+    <%= form.select :visibility, select_list , { prompt: "Choose Visibilty" }%>
   </div>
 
   <div class="field">
