--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,35 +1,28 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h2 class="text-center">All Posts</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Creator</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="btn btn-success"><%= link_to 'Create a New Post', new_post_path %></div>
 
-  <tbody>
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.name %></td>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to post.user.fullname , user_path(post.user.id) %></td>
-        <td><%= link_to 'Show', post %></td>
+
+    <div class="card m-2" >
+      <div class="card-body">
+        <h4 class="card-title"> <%= post.name %> </h5>
+        <h5 class="card-title"> <%= post.title %> </h5>
+        <div class="btn btn-dark"> <%= link_to post.user.fullname , user_path(post.user.id) %> </div>
+        <p class="card-text"><%= post.content %></p>
+        <div class="btn btn-info"><%= link_to 'Show', post %></div>
+        
         <% if current_user==post.user%>
-          <td><%= link_to 'Edit', edit_post_path(post) %></td>
-          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>      
-      </tr>
+          <div class="btn btn-warning"><%= link_to 'Edit', edit_post_path(post) %></div>
+          <div class="btn btn-danger"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <% end %>  
+      </div>
+    </div>
+
     <% end %>
-  </tbody>
-</table>
+ 
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+
