--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Post</h1>
+<h2>Create a New Post</h2>
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+<div class="btn btn-warning"> <%= link_to 'Back', posts_path %> </div>
