--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,21 @@
-<p id="notice"><%= notice %></p>
 
-<%= link_to @user.fullname + '\'s Friends', friend_list_path(:user_id => @user.id) %>
+<div class="btn btn-primary"><%= link_to @user.fullname + '\'s Friends', friend_list_path(:user_id => @user.id) %></div>
 
 <h1><%=@user.fullname%></h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Creator</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <%if @user==current_user%>
-    <%= link_to 'Edit My Profile', edit_user_registration_path %>
+
+  <%if @user==current_user%>  
+  <div class="btn btn-warning"><%= link_to 'Edit My Profile', edit_user_registration_path %></div>
   <%else%>
     <%friendship_a = Friendship.where(sender_id: @user.id, receiver_id: current_user.id)%>
     <%if(friendship_a.size()>0)%>
       <%if (friendship_a[0].status==0)%>
         <p><%=@user.fullname%> has sent you a friend request</p>
-        <%= link_to 'Accept Friend Request', accept_friend_request_path(:user_id => @user.id) %> |
-        <%= link_to 'Reject Friend Request', reject_friend_request_path(:user_id => @user.id) %>
+        <div class="btn btn-success"><%= link_to 'Accept Friend Request', accept_friend_request_path(:user_id => @user.id) %> </div>
+        <div class="btn btn-danger"><%= link_to 'Reject Friend Request', reject_friend_request_path(:user_id => @user.id) %></div>
       <%else%>
         <p>You and <%=@user.fullname%> are friends</p>
-        <%= link_to 'Unfriend', unfriend_friend_request_path(:user_id => @user.id) %>
+        <div class="btn btn-danger"><%= link_to 'Unfriend', unfriend_friend_request_path(:user_id => @user.id) %></div>
       <%end%>     
     <%end%>
 
@@ -33,41 +23,41 @@
 
     <%if(friendship_b.size()>0)%>
       <%if (friendship_b[0].status==0)%>
-        <p>You have sent <%=@user.fullname%> a friend request  |
-          <%= link_to 'Withdraw Friend Request', unsend_friend_request_path(:user_id => @user.id)%>
-        </p>
+        <p>You have sent <%=@user.fullname%> a friend request  </p>
+          <div class="btn btn-warning"><%= link_to 'Withdraw Friend Request', unsend_friend_request_path(:user_id => @user.id)%></div>
+        
       <%else%>
-        <p>You and <%=@user.fullname%> are friends |
-        <%= link_to 'Unfriend', unfriend_friend_request_path(:user_id => @user.id) %>
-        </p>
+        <p>You and <%=@user.fullname%> are friends </p>
+        <div class="btn btn-danger"><%= link_to 'Unfriend', unfriend_friend_request_path(:user_id => @user.id) %></div>
+        
       <%end%>     
     <%end%>
 
     <% if friendship_b.size()==0 && friendship_a.size()==0%>
-      <%= link_to 'Send Friend Request', send_friend_request_path(:user_id => @user.id) %>
+      <div class="btn btn-dark"> <%= link_to 'Send Friend Request', send_friend_request_path(:user_id => @user.id) %> </div>
     <%end%>
   <%end%>
 
-  <tbody>
     
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.name %></td>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        
-        <td><%= link_to post.user.fullname , user_path(post.user.id) %></td>
-        <td><%= link_to 'Show', post %></td>
-        <% if current_user==post.user%>
-          <td><%= link_to 'Edit', edit_post_path(post) %></td>
-          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>      
-      </tr>
-    <% end %>
-  </tbody>
 
-</table>
+
+
+        <div class="card m-2" >
+          <div class="card-body">
+            <h4 class="card-title"> <%= post.name %> </h5>
+            <h5 class="card-title"> <%= post.title %> </h5>
+            <div class="btn btn-dark"> <%= link_to post.user.fullname , user_path(post.user.id) %> </div>
+            <p class="card-text"><%= post.content %></p>
+            <div class="btn btn-info"><%= link_to 'Show', post %></div>
+            
+            <% if current_user==post.user%>
+              <div class="btn btn-warning"><%= link_to 'Edit', edit_post_path(post) %></div>
+              <div class="btn btn-danger"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+            <% end %>  
+          </div>
+        </div>
+    <% end %>
 
 <br>
-
-<%= link_to 'New Post', new_post_path %>
+<div class="btn btn-success"><%= link_to 'Create a New Post', new_post_path %></div>
