--- a/app/views/commentaries/new.html.erb
+++ b/app/views/commentaries/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'formnew', commentary: @commentary %>
 
-<%= link_to 'Back', post_path(@post_id) %>
+<div class="btn btn-danger"> <%= link_to 'Back', post_path(@post_id) %> </div>
