--- a/app/views/commentaries/edit.html.erb
+++ b/app/views/commentaries/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', commentary: @commentary %>
 
-<%= link_to 'Show', @commentary %> |
-<%= link_to 'Back', post_path(@commentary.post_id) %>
+<div class="btn btn-info"> <%= link_to 'Show', @commentary %> </div>
+<div class="btn btn-danger"><%= link_to 'Back', post_path(@commentary.post_id) %> </div>
