--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,7 +34,7 @@
     <div class="col-md-8"> <%= form.text_area :content , class: "form-control" %> </div>
   </div>
 
-  <div class="m-4">
+  <div class="form-group">
      <%= form.submit %> 
   </div>
   
