--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div class="btn btn-info"> <%= link_to 'Show', @post %> </div>
+<div class="btn btn-danger"> <%= link_to 'Back', posts_path %> </div>
