--- a/app/views/friendships/allfriendrequest.html.erb
+++ b/app/views/friendships/allfriendrequest.html.erb
@@ -1,8 +1,16 @@
-<h2>Your Friend Requests</h2>
-<h4><%=@users.size()%> friend-requests in total</h4>
+<h2 class="text-center">Your Friend Requests</h2>
+<h4><%=@users.size()%> friend-request(s) in total</h4>
 
-<%@users.each do |user|%>
-    <p><%= link_to user.fullname , user_path(user.id) %></p>
-<%end%>
+<div class="row row-cols-1 row-cols-md-3">
+ <%@users.each do |user|%>
+  <div class="col mb-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"> <%= link_to user.fullname , user_path(user.id) %></h5>
+      </div>
+    </div>
+  </div>
+  <%end%>
+</div>
 
-<td><%= link_to 'Back', user_path(current_user.id) %></td>
+<div class="btn btn-dark"><%= link_to 'Back', user_path(current_user.id) %></div>
