--- a/app/views/friendships/friendlist.html.erb
+++ b/app/views/friendships/friendlist.html.erb
@@ -1,8 +1,17 @@
-<h2><%=User.find(@user_id).fullname%>'s friendlist</h2>
-<h4><%=@users.size()%> friends in total</h4>
+<h2 class="text-center"><%=User.find(@user_id).fullname%>'s friendlist</h2>
+<h4><%=@users.size()%> friend(s) in total</h4>
+<div class="row row-cols-1 row-cols-md-3">
+ <%@users.each do |user|%>
+  <div class="col mb-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"> <%= link_to user.fullname , user_path(user.id) %></h5>
+      </div>
+    </div>
+  </div>
+  <%end%>
+</div>
 
-<%@users.each do |user|%>
-    <p><%= link_to user.fullname , user_path(user.id) %></p>
-<%end%>
 
-<td><%= link_to 'Back', user_path(@user_id) %></td>
+
+<div class="btn btn-dark"><%= link_to 'Back', user_path(@user_id) %></div>
