--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
   <%end%>
   <div class="btn btn-dark"><%= link_to 'Back', posts_path %> </div><br>
 
-  <% likes = Like.where(post_id: @post.id,user_id:current_user.id)%>
+  <% likes = Like.where(post_id: @post.id)%>
 
   <table class="table">
   <thead>
