--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,29 +31,35 @@
   <%end%>
 
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light"> 
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-
-   <%if !current_user %>
-    <li class="nav-item nav-link"><%= link_to "Sign Up", new_user_registration_path  %></li>
-    <li class="nav-item nav-link"><%= link_to "Sign In", new_user_session_path%></li>
-  <%end%>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   
-    <li class="nav-item nav-link"> <%= link_to "Sign Out", destroy_user_session_path, :method => :delete if current_user %> </li>
-  <%if current_user %>
-    <li class="nav-item nav-link"> <%= link_to "Me", user_path(current_user.id)  %> </li>
-    <li class="nav-item nav-link"> <%= link_to "My Friend Requests", all_friend_request_path %> </li>
-  <%end%>
-    <li class="nav-item nav-link"> <%= link_to "Posts", posts_path%></li>
-  </ul>
-  <%= form_tag(search_people_path, method: 'get') do %>
-        <%= text_field_tag(:search, params[:search])%>
-        <%= submit_tag("Search", name: nil) %>
-  <% end %>
-</div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <%if !current_user %>
+          <li class="nav-item nav-link"><%= link_to "Sign Up", new_user_registration_path  %></li>
+          <li class="nav-item nav-link"><%= link_to "Sign In", new_user_session_path%></li>
+        <%end%>
+        
+          <li class="nav-item nav-link"> <%= link_to "Sign Out", destroy_user_session_path, :method => :delete if current_user %> </li>
+        <%if current_user %>
+          <li class="nav-item nav-link"> <%= link_to "Me", user_path(current_user.id)  %> </li>
+          <li class="nav-item nav-link"> <%= link_to "My Friend Requests", all_friend_request_path %> </li>
+        <%end%>
+          <li class="nav-item nav-link"> <%= link_to "Posts", posts_path%></li>
+      </ul>
+        <%= form_tag(search_people_path, method: 'get') do %>
+              <%= text_field_tag(:search, params[:search])%>
+              <%= submit_tag("Search", name: nil) %>
+        <% end %>
+  </div>
 </nav>
+
+
+
 
 
 
